♻️ Rename curate to curator

--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -65,13 +65,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curate = ln.Curator.from_anndata(\n",
+    "curator = ln.Curator.from_anndata(\n",
     "    adata,\n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
     "    organism=\"human\",\n",
     "    using_key=\"laminlabs/lamindata\"\n",
     ")\n",
-    "curate.validate()"
+    "curator.validate()"
    ]
   },
   {
@@ -120,7 +120,7 @@
     "    \"cell_line\": bt.Source.using(\"laminlabs/lamindata\").filter(name=\"depmap\").one(),\n",
     "}\n",
     "\n",
-    "curate = ln.Curator.from_anndata(\n",
+    "curator = ln.Curator.from_anndata(\n",
     "    adata,\n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
     "    categoricals=categoricals,\n",
@@ -129,8 +129,8 @@
     "    using_key=\"laminlabs/lamindata\"\n",
     ")\n",
     "\n",
-    "curate.validate()\n",
-    "curate.standardize(\"disease\")"
+    "curator.validate()\n",
+    "curator.standardize(\"disease\")"
    ]
   },
   {
@@ -152,11 +152,11 @@
    },
    "outputs": [],
    "source": [
-    "curate.add_new_from(\"perturbation_type\")\n",
-    "curate.add_new_from(\"sex\")\n",
-    "curate.add_new_from(\"time\")\n",
-    "curate.add_new_from(\"tissue_type\")\n",
-    "curate.add_new_from(\"cell_line\")"
+    "curator.add_new_from(\"perturbation_type\")\n",
+    "curator.add_new_from(\"sex\")\n",
+    "curator.add_new_from(\"time\")\n",
+    "curator.add_new_from(\"tissue_type\")\n",
+    "curator.add_new_from(\"cell_line\")"
    ]
   },
   {
@@ -243,7 +243,7 @@
    "source": [
     ":::{dropdown} What are the associated targets?\n",
     "\n",
-    "The following targets are the direct targets of the perturbations, and while they may affect a pathway, we only curate the direct targets for simplicity.\n",
+    "The following targets are the direct targets of the perturbations, and while they may affect a pathway, we only curator the direct targets for simplicity.\n",
     "\n",
     "1. **sgGPX4-1**: **Gene/Protein** - GPX4 (Glutathione Peroxidase 4)\n",
     "2. **sgGPX4-2**: **Gene/Protein** - GPX4 (Glutathione Peroxidase 4)\n",
@@ -431,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register curated artifact"
+    "## Register curatord artifact"
    ]
   },
   {
@@ -444,7 +444,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = curate.save_artifact(description=\"McFarland AnnData\")"
+    "artifact = curator.save_artifact(description=\"McFarland AnnData\")"
    ]
   },
   {
