--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -41,8 +41,7 @@
     "\n",
     "pd.set_option(\"display.max_columns\", None)\n",
     "\n",
-    "ln.context.uid = \"K6sInKIQW5nt0003\"\n",
-    "ln.context.track()"
+    "ln.track(\"K6sInKIQW5nt0003\")"
    ]
   },
   {
@@ -66,13 +65,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "curate = ln.Curator.from_anndata(\n",
+    "curator = ln.Curator.from_anndata(\n",
     "    adata,\n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
     "    organism=\"human\",\n",
     "    using_key=\"laminlabs/lamindata\"\n",
     ")\n",
-    "curate.validate()"
+    "curator.validate()"
    ]
   },
   {
@@ -121,7 +120,7 @@
     "    \"cell_line\": bt.Source.using(\"laminlabs/lamindata\").filter(name=\"depmap\").one(),\n",
     "}\n",
     "\n",
-    "curate = ln.Curator.from_anndata(\n",
+    "curator = ln.Curator.from_anndata(\n",
     "    adata,\n",
     "    var_index=bt.Gene.ensembl_gene_id,\n",
     "    categoricals=categoricals,\n",
@@ -130,7 +129,17 @@
     "    using_key=\"laminlabs/lamindata\"\n",
     ")\n",
     "\n",
-    "curate.validate()"
+    "curator.validate()\n",
+    "curator.standardize(\"disease\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Feature.df()"
    ]
   },
   {
@@ -143,11 +152,11 @@
    },
    "outputs": [],
    "source": [
-    "curate.add_new_from(\"perturbation_type\")\n",
-    "curate.add_new_from(\"sex\")\n",
-    "curate.add_new_from(\"time\")\n",
-    "curate.add_new_from(\"tissue_type\")\n",
-    "curate.add_new_from(\"cell_line\")"
+    "curator.add_new_from(\"perturbation_type\")\n",
+    "curator.add_new_from(\"sex\")\n",
+    "curator.add_new_from(\"time\")\n",
+    "curator.add_new_from(\"tissue_type\")\n",
+    "curator.add_new_from(\"cell_line\")"
    ]
   },
   {
@@ -234,7 +243,7 @@
    "source": [
     ":::{dropdown} What are the associated targets?\n",
     "\n",
-    "The following targets are the direct targets of the perturbations, and while they may affect a pathway, we only curate the direct targets for simplicity.\n",
+    "The following targets are the direct targets of the perturbations, and while they may affect a pathway, we only curator the direct targets for simplicity.\n",
     "\n",
     "1. **sgGPX4-1**: **Gene/Protein** - GPX4 (Glutathione Peroxidase 4)\n",
     "2. **sgGPX4-2**: **Gene/Protein** - GPX4 (Glutathione Peroxidase 4)\n",
@@ -274,7 +283,7 @@
     "    treatment = wl.GeneticTreatment(system=\"CRISPR-Cas9\", name=name).save()\n",
     "    if symbol != \"lacz\":\n",
     "        gene_result = bt.Gene.from_source(symbol=symbol, organism=organism)\n",
-    "        gene = gene_result[0] if isinstance(gene_result, list) else gene_result\n",
+    "        gene = gene_result[0] if isinstance(gene_result, ln.core.RecordList) else gene_result\n",
     "        gene = gene.save()\n",
     "    else:\n",
     "        gene = bt.Gene(symbol=symbol, organism=organism).save()\n",
@@ -422,7 +431,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Register curated artifact"
+    "## Register curatord artifact"
    ]
   },
   {
@@ -435,7 +444,7 @@
    },
    "outputs": [],
    "source": [
-    "artifact = curate.save_artifact(description=\"McFarland AnnData\")"
+    "artifact = curator.save_artifact(description=\"McFarland AnnData\")"
    ]
   },
   {
@@ -479,7 +488,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py310",
    "language": "python",
    "name": "python3"
   },
@@ -493,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
