💄 Print anndata in perturbation guide

--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -40,8 +40,14 @@
     "import pandas as pd\n",
     "\n",
     "pd.set_option(\"display.max_columns\", None)\n",
-    "\n",
     "ln.track(\"K6sInKIQW5nt0003\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let us transfer a non-curated dataset from `laminlabs/lamindata` (see [this transform](https://lamin.ai/laminlabs/lamindata/transform/13VINnFk89PE0006) to learn where it was processed)."
    ]
   },
   {
@@ -54,15 +60,31 @@
    },
    "outputs": [],
    "source": [
-    "# See https://lamin.ai/laminlabs/lamindata/transform/13VINnFk89PE0006 to learn how this dataset was prepared\n",
     "adata = ln.Artifact.using(\"laminlabs/lamindata\").get(uid=\"Xk7Qaik9vBLV4PKf0001\").load()\n",
+    "adata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
     "adata.obs.head(3)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "curator = ln.Curator.from_anndata(\n",
@@ -131,15 +153,6 @@
     "\n",
     "curator.validate()\n",
     "curator.standardize(\"disease\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Feature.df()"
    ]
   },
   {
