--- a/docs/perturbation.ipynb
+++ b/docs/perturbation.ipynb
@@ -203,8 +203,8 @@
    "source": [
     "The {mod}`wetlab` schema has two major components:\n",
     "\n",
-    "1. {class}`wetlab.EnvironmentalTreatment` to model perturbations such as heat, {class}`wetlab.GeneticTreatment` to model perturbations such as CRISPR, and {class}`wetlab.CompoundTreatment` to model, for example, drugs. Several treatments together can be modeled using {class}`wetlab.CombinationTreatment`.\n",
-    "2. Known targets of treatments can be modeled through {class}`wetlab.TreatmentTarget` which can be one or several of {class}`bionty.Gene`, {class}`bionty.Protein`, or {class}`bionty.Pathway` records."
+    "1. {class}`wetlab.EnvironmentalPerturbation` to model perturbations such as heat, {class}`wetlab.GeneticPerturbation` to model perturbations such as CRISPR, and {class}`wetlab.CompoundPerturbation` to model, for example, drugs. Several perturbations together can be modeled using {class}`wetlab.CombinationPerturbation`.\n",
+    "2. Known targets of perturbations can be modeled through {class}`wetlab.PerturbationTarget` which can be one or several of {class}`bionty.Gene`, {class}`bionty.Protein`, or {class}`bionty.Pathway` records."
    ]
   },
   {
@@ -220,8 +220,8 @@
    "source": [
     "Genetic perturbations can be modeled in two ways depending on the available information by populating a:\n",
     "\n",
-    "1. {class}`wetlab.GeneticTreatment` record if the system such as the guide RNA name or sequence, the on- and off-target scores are known.\n",
-    "2. {class}`wetlab.TreatmentTarget` record that links to {class}`bionty.Gene` records."
+    "1. {class}`wetlab.GeneticPerturbation` record if the system such as the guide RNA name or sequence, the on- and off-target scores are known.\n",
+    "2. {class}`wetlab.PerturbationTarget` record that links to {class}`bionty.Gene` records."
    ]
   },
   {
@@ -270,7 +270,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the perturbation metadata contains the guide RNA names, we model the genetic perturbations using both {class}`wetlab.GeneticTreatment` and {class}`wetlab.TreatmentTarget`."
+    "Since the perturbation metadata contains the guide RNA names, we model the genetic perturbations using both {class}`wetlab.GeneticPerturbation` and {class}`wetlab.PerturbationTarget`."
    ]
   },
   {
@@ -283,7 +283,7 @@
    },
    "outputs": [],
    "source": [
-    "treatments = [\n",
+    "perturbations = [\n",
     "    (\"sgGPX4-1\", \"GPX4\", \"Glutathione Peroxidase 4\"),\n",
     "    (\"sgGPX4-2\", \"GPX4\", \"Glutathione Peroxidase 4\"),\n",
     "    (\"sgor2j2\", \"or2j2\", \"Olfactory receptor family 2 subfamily J member 2\"),\n",
@@ -291,19 +291,19 @@
     "]\n",
     "organism = bt.Organism.lookup().human\n",
     "\n",
-    "genetic_treatments = []\n",
-    "for name, symbol, target_name in treatments:\n",
-    "    treatment = wl.GeneticTreatment(system=\"CRISPR-Cas9\", name=name).save()\n",
+    "genetic_perturbations = []\n",
+    "for name, symbol, target_name in perturbations:\n",
+    "    perturbation = wl.GeneticPerturbation(system=\"CRISPR-Cas9\", name=name).save()\n",
     "    if symbol != \"lacz\":\n",
     "        gene_result = bt.Gene.from_source(symbol=symbol, organism=organism)\n",
     "        gene = gene_result[0] if isinstance(gene_result, ln.core.RecordList) else gene_result\n",
     "        gene = gene.save()\n",
     "    else:\n",
     "        gene = bt.Gene(symbol=symbol, organism=organism).save()\n",
-    "    target = wl.TreatmentTarget(name=target_name).save()\n",
+    "    target = wl.PerturbationTarget(name=target_name).save()\n",
     "    target.genes.add(gene)\n",
-    "    treatment.targets.add(target)\n",
-    "    genetic_treatments.append(treatment)"
+    "    perturbation.targets.add(target)\n",
+    "    genetic_perturbations.append(perturbation)"
    ]
   },
   {
@@ -423,21 +423,21 @@
    },
    "outputs": [],
    "source": [
-    "unique_treatments = drug_metadata[\n",
+    "unique_perturbations = drug_metadata[\n",
     "    [\"perturbation\", \"dose_unit\", \"dose_value\"]\n",
     "].drop_duplicates()\n",
     "\n",
-    "compound_treatments = []\n",
-    "for _, row in unique_treatments.iterrows():\n",
+    "compound_perturbations = []\n",
+    "for _, row in unique_perturbations.iterrows():\n",
     "    compound = wl.Compound.get(name=row[\"perturbation\"])\n",
-    "    treatment = wl.CompoundTreatment(\n",
+    "    perturbation = wl.CompoundPerturbation(\n",
     "        name=compound.name,\n",
     "        concentration=row[\"dose_value\"],\n",
     "        concentration_unit=row[\"dose_unit\"],\n",
     "    )\n",
-    "    compound_treatments.append(treatment)\n",
+    "    compound_perturbations.append(perturbation)\n",
     "\n",
-    "ln.save(compound_treatments)"
+    "ln.save(compound_perturbations)"
    ]
   },
   {
@@ -466,8 +466,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "artifact.genetic_treatments.set(genetic_treatments)\n",
-    "artifact.compound_treatments.set(compound_treatments)"
+    "artifact.genetic_perturbations.set(genetic_perturbations)\n",
+    "artifact.compound_perturbations.set(compound_perturbations)"
    ]
   },
   {
