♻️ Replace is_new_version_of with revises

--- a/docs/facs2.ipynb
+++ b/docs/facs2.ipynb
@@ -423,7 +423,7 @@
    "source": [
     "collection_v2 = ln.Collection(\n",
     "    [artifact, collection_v1.ordered_artifacts[0]],\n",
-    "    is_new_version_of=collection_v1,\n",
+    "    revises=collection_v1,\n",
     "    version=\"2\",\n",
     ")\n",
     "collection_v2.describe()"
