--- a/docs/rdf-sparql.ipynb
+++ b/docs/rdf-sparql.ipynb
@@ -36,8 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install 'lamindb[aws,bionty]'\n",
-    "!lamin load laminlabs/cellxgene"
+    "# pip install 'lamindb[bionty]' rdflib\n",
+    "!lamin load laminlabs/lamindata"
    ]
   },
   {
@@ -143,7 +143,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lamindb",
+   "display_name": "py312",
    "language": "python",
    "name": "python3"
   },
@@ -157,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
