💚 Update lamin connect command

--- a/docs/rdf-sparql.ipynb
+++ b/docs/rdf-sparql.ipynb
@@ -37,7 +37,7 @@
    "outputs": [],
    "source": [
     "# pip install 'lamindb[bionty]' rdflib\n",
-    "!lamin load laminlabs/lamindata"
+    "!lamin connect laminlabs/lamindata"
    ]
   },
   {
