--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -15,22 +15,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    ":::{note}\n",
-    "\n",
-    "Please see: \n",
-    "\n",
-    "- {doc}`docs:vitessce`\n",
-    "- {doc}`docs:rxrx`\n",
-    "\n",
-    "This page is for now just a stub.\n",
-    "\n",
-    ":::"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -40,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "# !pip install 'lamindb[jupyter,bionty]'\n",
+    "# !pip install 'lamindb[jupyter,bionty]' spatialdata[spatialdata-io,spatialdata-plot]\n",
     "!lamin init --storage ./test-spatial --schema bionty"
    ]
   },
@@ -56,10 +40,14 @@
    "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
-    "import matplotlib.pyplot as plt\n",
-    "import scanpy as sc\n",
+    "import pandas as pd\n",
+    "from spatialdata.datasets import blobs\n",
+    "import spatialdata_plot\n",
+    "import warnings\n",
     "\n",
-    "ln.track(\"daeFs3PkquDW0000\")"
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "ln.track()"
    ]
   },
   {
@@ -70,192 +58,67 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Here, we have a spatial gene expression dataset measured using [Visium](https://www.10xgenomics.com/products/spatial-gene-expression) from [Suo22](https://developmental.cellatlas.io/fetal-immune).\n",
+    "# Replace this with a proper dataset from https://spatialdata.scverse.org/en/latest/tutorials/notebooks/datasets/README.html\n",
     "\n",
-    "This collection contains two parts:\n",
-    "\n",
-    "1. a high-res image of a slice of fetal liver\n",
-    "2. a single cell expression dataset in .h5ad"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "img_path = ln.core.datasets.file_tiff_suo22()\n",
-    "img = plt.imread(img_path)\n",
-    "plt.imshow(img)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "adata = ln.core.datasets.anndata_suo22_Visium10X()\n",
-    "# subset to the same image\n",
-    "adata = adata[adata.obs[\"img_id\"] == \"F121_LP1_4LIV\"].copy()\n",
-    "adata"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plot where CD45+ leukocytes are in the slice\n",
-    "sc.pl.scatter(adata, \"array_row\", \"array_col\", color=\"ENSG00000081237\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Validate annotations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We'll register the single-cell data and the image as a `Collection`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curate = ln.Curator.from_anndata(\n",
-    "    adata,\n",
-    "    var_index=bt.Gene.ensembl_gene_id,\n",
-    "    categoricals={\"sample\": ln.ULabel.name},\n",
-    "    organism=\"human\",\n",
+    "sdata = blobs()\n",
+    "sdata.attrs[\"sample\"] = {\n",
+    "    \"assay\": \"Visium Spatial Gene Expression\",\n",
+    "    \"disease\": \"Alzheimer's dementia\",\n",
+    "    \"developmental_stage\": \"very early\",\n",
+    "}\n",
+    "sdata.tables[\"table\"].var.index = [\n",
+    "    \"ENSG00000139618\",  # BRCA2\n",
+    "    \"ENSG00000157764\",  # BRAF\n",
+    "    \"ENSG00000999999\",  # Does not exist - to test add new\n",
+    "]\n",
+    "sdata.tables[\"table\"].obs[\"sample_region\"] = pd.Categorical(\n",
+    "    [\"region 1\"] * 13 + [\"region 2\"] * 13\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curate.validate()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curate.add_new_from(\"sample\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "curate.validate()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Register curated artifact"
+    "curator = ln.Curator.from_spatialdata(\n",
+    "    sdata,\n",
+    "    var_index={\"table\": bt.Gene.ensembl_gene_id},\n",
+    "    categoricals={\n",
+    "        \"sample\": {\n",
+    "            \"assay\": bt.ExperimentalFactor.name,\n",
+    "            \"disease\": bt.Disease.name,\n",
+    "            \"developmental_stage\": bt.DevelopmentalStage.name,\n",
+    "        },\n",
+    "        \"table\": {\"sample_region\": ln.ULabel.name},\n",
+    "    },\n",
+    "    organism=\"human\",\n",
+    ")\n",
+    "\n",
+    "curator.validate()\n",
+    "curator.add_new_from_var_index(\"table\")\n",
+    "curator.add_new_from(key=\"developmental_stage\", accessor=\"sample\")\n",
+    "curator.add_new_from(key=\"sample_region\", accessor=\"table\")\n",
+    "\n",
+    "curator.standardize(key=\"disease\", accessor=\"sample\")\n",
+    "\n",
+    "artifact = curator.save_artifact(description=\"blob spatialdata\")\n",
+    "artifact.describe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact_ad = curate.save_artifact(description=\"Suo22 Visium10X image F121_LP1_4LIV\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "artifact_ad.describe()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "## Register a collection"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
    "outputs": [],
    "source": [
-    "artifact_img = ln.Artifact(img_path, description=\"Suo22 image F121_LP1_4LIV\")\n",
-    "artifact_img.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "collection = ln.Collection([artifact_ad, artifact_img], name=\"Suo22\")\n",
-    "collection.save()"
+    "sdata.pl.render_images(\"blobs_multiscale_image\").pl.show()"
    ]
   },
   {
@@ -269,17 +132,14 @@
    "outputs": [],
    "source": [
     "# clean up test instance\n",
-    "!lamin delete --force test-spatial\n",
-    "!rm -r test-flow"
+    "!rm -rf test-spatial\n",
+    "!lamin delete --force test-spatial"
    ]
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "ae1fefc8646a06dd2e75004cd934adda7c5727b046986a772e3b44b0ffba9754"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('py39')",
+   "display_name": "lamindb",
    "language": "python",
    "name": "python3"
   },
@@ -293,7 +153,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.8"
   },
   "nbproject": {
    "dependency": null,
