--- a/docs/spatial1.ipynb
+++ b/docs/spatial1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/spatial.ipynb)\n"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/spatial1.ipynb)\n"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace this with a proper dataset from https://spatialdata.scverse.org/en/latest/tutorials/notebooks/datasets/README.html\n",
+    "# Replace this with a proper dataset from for example https://spatialdata.scverse.org/en/latest/tutorials/notebooks/datasets/README.html\n",
     "\n",
     "sdata = blobs()\n",
     "sdata.attrs[\"sample\"] = {\n",
