--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -4,24 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/spatial2.ipynb)\n"
+    "# Spatial"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query SpatialData"
+    "Here, you'll learn how to manage a growing number of spatial datasets as a single queryable collection:\n",
+    "\n",
+    "# TODO rewrite\n",
+    "1. create a dataset (an {class}`~lamindb.Artifact`) and seed a {class}`~lamindb.Collection` (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey))\n",
+    "2. append a new dataset to the collection ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna2))\n",
+    "3. query & analyze individual datasets ([![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)](/scrna3))\n",
+    "4. load the collection into memory ([![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)](/scrna4))\n",
+    "5. iterate over the collection to train an ML model ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna-mappedcollection))\n",
+    "6. concatenate the collection to a single `tiledbsoma` array store ([![scrna6/6](https://img.shields.io/badge/scrna6/6-lightgrey)](/scrna-tiledbsoma))\n",
+    "\n",
+    "\n",
+    "```{toctree}\n",
+    ":maxdepth: 1\n",
+    ":hidden:\n",
+    "\n",
+    "spatial2\n",
+    "spatial3\n",
+    "spatial4\n",
+    "spatial5\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# !pip install 'lamindb[jupyter,bionty]' spatialdata[spatialdata-io,spatialdata-plot]\n",
@@ -31,16 +46,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
     "import bionty as bt\n",
     "import pandas as pd\n",
+    "from spatialdata.datasets import blobs\n",
     "import spatialdata_plot\n",
     "import warnings\n",
     "\n",
@@ -54,20 +66,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Query regions of interest\n",
-    "# Query different resolutions\n",
-    "# we have to find ways to potentially combine metadata with resolution to create powerful queries here"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# clean up test instance\n",
@@ -93,12 +97,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.12.8"
-  },
-  "nbproject": {
-   "dependency": null,
-   "id": "daeFs3PkquDW",
-   "time_init": "2022-07-12T17:54:02.478333+00:00",
-   "version": "draft"
   }
  },
  "nbformat": 4,
