--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/spatial4.ipynb)\n"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/spatial3.ipynb)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Interactive SpatialData visualization"
+    "# Spatial ML use case"
    ]
   },
   {
@@ -55,9 +55,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What is Vitessce\n",
-    "# How to create Vitessce configs. Also talk to Mark\n",
-    "# Get configs from Lea"
+    "# Talk to Sergei to figure out how we can support SpatialData with MappedCollection\n",
+    "# Cell Segmentation, domain adaptation, or just some classification\n",
+    "# Potentially here or in a new guide how to create a tiledbsoma store for spatial data. Talk to Sergei again."
    ]
   },
   {
