--- a/docs/spatial5.ipynb
+++ b/docs/spatial5.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/spatial2.ipynb)\n"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Source%20on%20GitHub-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/spatial4.ipynb)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query SpatialData"
+    "# Interactive SpatialData visualization"
    ]
   },
   {
@@ -55,9 +55,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Query regions of interest\n",
-    "# Query different resolutions\n",
-    "# we have to find ways to potentially combine metadata with resolution to create powerful queries here"
+    "# What is Vitessce\n",
+    "# How to create Vitessce configs. Also talk to Mark\n",
+    "# Get configs from Lea"
    ]
   },
   {
