--- a/docs/spatial4.ipynb
+++ b/docs/spatial4.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spatial ML use case"
+    "# Interactive visualization using Vitessce"
    ]
   },
   {
@@ -55,9 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Talk to Sergei to figure out how we can support SpatialData with MappedCollection\n",
-    "# Cell Segmentation, domain adaptation, or just some classification\n",
-    "# Potentially here or in a new guide how to create a tiledbsoma store for spatial data. Talk to Sergei again."
+    "# talk to Tim & Lea to get latest viz\n",
+    "# talk to Mark to get a nice viz"
    ]
   },
   {
