--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -13,13 +13,10 @@
    "source": [
     "Here, you'll learn how to manage a growing number of spatial datasets as a single queryable collection:\n",
     "\n",
-    "# TODO rewrite\n",
-    "1. create a dataset (an {class}`~lamindb.Artifact`) and seed a {class}`~lamindb.Collection` (![scrna1/6](https://img.shields.io/badge/scrna1/6-lightgrey))\n",
-    "2. append a new dataset to the collection ([![scrna2/6](https://img.shields.io/badge/scrna2/6-lightgrey)](/scrna2))\n",
-    "3. query & analyze individual datasets ([![scrna3/6](https://img.shields.io/badge/scrna3/6-lightgrey)](/scrna3))\n",
-    "4. load the collection into memory ([![scrna4/6](https://img.shields.io/badge/scrna4/6-lightgrey)](/scrna4))\n",
-    "5. iterate over the collection to train an ML model ([![scrna5/6](https://img.shields.io/badge/scrna5/6-lightgrey)](/scrna-mappedcollection))\n",
-    "6. concatenate the collection to a single `tiledbsoma` array store ([![scrna6/6](https://img.shields.io/badge/scrna6/6-lightgrey)](/scrna-tiledbsoma))\n",
+    "1. curate and ingest spatial data (![spatial1/6](https://img.shields.io/badge/spatial1/6-lightgrey))\n",
+    "2. query & analyze spatial datasets ([![spatial2/6](https://img.shields.io/badge/spatial2/6-lightgrey)](/spatial2))\n",
+    "3. load the collection into memory & train a ML model ([![spatial3/6](https://img.shields.io/badge/spatial3/6-lightgrey)](/spatial3))\n",
+    "4. create and share interactive visualizations with vitessce ([![spatial4/6](https://img.shields.io/badge/spatial4/6-lightgrey)](/spatial4))\n",
     "\n",
     "\n",
     "```{toctree}\n",
@@ -29,7 +26,6 @@
     "spatial2\n",
     "spatial3\n",
     "spatial4\n",
-    "spatial5\n",
     "```"
    ]
   },
@@ -59,6 +55,77 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "ln.track()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## An example spatial dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace this with a proper dataset from for example https://spatialdata.scverse.org/en/latest/tutorials/notebooks/datasets/README.html\n",
+    "\n",
+    "sdata = blobs()\n",
+    "sdata.attrs[\"sample\"] = {\n",
+    "    \"assay\": \"Visium Spatial Gene Expression\",\n",
+    "    \"disease\": \"Alzheimer's dementia\",\n",
+    "    \"developmental_stage\": \"very early\",\n",
+    "}\n",
+    "sdata.tables[\"table\"].var.index = [\n",
+    "    \"ENSG00000139618\",  # BRCA2\n",
+    "    \"ENSG00000157764\",  # BRAF\n",
+    "    \"ENSG00000999999\",  # Does not exist - to test add new\n",
+    "]\n",
+    "sdata.tables[\"table\"].obs[\"sample_region\"] = pd.Categorical(\n",
+    "    [\"region 1\"] * 13 + [\"region 2\"] * 13\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "curator = ln.Curator.from_spatialdata(\n",
+    "    sdata,\n",
+    "    var_index={\"table\": bt.Gene.ensembl_gene_id},\n",
+    "    categoricals={\n",
+    "        \"sample\": {\n",
+    "            \"assay\": bt.ExperimentalFactor.name,\n",
+    "            \"disease\": bt.Disease.name,\n",
+    "            \"developmental_stage\": bt.DevelopmentalStage.name,\n",
+    "        },\n",
+    "        \"table\": {\"sample_region\": ln.ULabel.name},\n",
+    "    },\n",
+    "    organism=\"human\",\n",
+    ")\n",
+    "\n",
+    "curator.validate()\n",
+    "curator.add_new_from_var_index(\"table\")\n",
+    "curator.add_new_from(key=\"developmental_stage\", accessor=\"sample\")\n",
+    "curator.add_new_from(key=\"sample_region\", accessor=\"table\")\n",
+    "\n",
+    "curator.standardize(key=\"disease\", accessor=\"sample\")\n",
+    "\n",
+    "artifact = curator.save_artifact(description=\"blob spatialdata\")\n",
+    "artifact.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sdata.pl.render_images(\"blobs_multiscale_image\").pl.show()"
    ]
   },
   {
