--- a/docs/spatial2.ipynb
+++ b/docs/spatial2.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Spatial"
+    "# Query and analyze spatial data"
    ]
   },
   {
@@ -31,11 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
@@ -51,74 +47,14 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## An example spatial dataset"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Replace this with a proper dataset from for example https://spatialdata.scverse.org/en/latest/tutorials/notebooks/datasets/README.html\n",
-    "\n",
-    "sdata = blobs()\n",
-    "sdata.attrs[\"sample\"] = {\n",
-    "    \"assay\": \"Visium Spatial Gene Expression\",\n",
-    "    \"disease\": \"Alzheimer's dementia\",\n",
-    "    \"developmental_stage\": \"very early\",\n",
-    "}\n",
-    "sdata.tables[\"table\"].var.index = [\n",
-    "    \"ENSG00000139618\",  # BRCA2\n",
-    "    \"ENSG00000157764\",  # BRAF\n",
-    "    \"ENSG00000999999\",  # Does not exist - to test add new\n",
-    "]\n",
-    "sdata.tables[\"table\"].obs[\"sample_region\"] = pd.Categorical(\n",
-    "    [\"region 1\"] * 13 + [\"region 2\"] * 13\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "curator = ln.Curator.from_spatialdata(\n",
-    "    sdata,\n",
-    "    var_index={\"table\": bt.Gene.ensembl_gene_id},\n",
-    "    categoricals={\n",
-    "        \"sample\": {\n",
-    "            \"assay\": bt.ExperimentalFactor.name,\n",
-    "            \"disease\": bt.Disease.name,\n",
-    "            \"developmental_stage\": bt.DevelopmentalStage.name,\n",
-    "        },\n",
-    "        \"table\": {\"sample_region\": ln.ULabel.name},\n",
-    "    },\n",
-    "    organism=\"human\",\n",
-    ")\n",
-    "\n",
-    "curator.validate()\n",
-    "curator.add_new_from_var_index(\"table\")\n",
-    "curator.add_new_from(key=\"developmental_stage\", accessor=\"sample\")\n",
-    "curator.add_new_from(key=\"sample_region\", accessor=\"table\")\n",
-    "\n",
-    "curator.standardize(key=\"disease\", accessor=\"sample\")\n",
-    "\n",
-    "artifact = curator.save_artifact(description=\"blob spatialdata\")\n",
-    "artifact.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sdata.pl.render_images(\"blobs_multiscale_image\").pl.show()"
+    "# Query regions of interest\n",
+    "# Query different resolutions\n",
+    "# we have to find ways to potentially combine metadata with resolution to create powerful queries here"
    ]
   },
   {
