--- a/docs/spatial3.ipynb
+++ b/docs/spatial3.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Query SpatialData"
+    "# Train a spatial ML model"
    ]
   },
   {
@@ -55,9 +55,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Query regions of interest\n",
-    "# Query different resolutions\n",
-    "# we have to find ways to potentially combine metadata with resolution to create powerful queries here"
+    "# Talk to Sergei to figure out how we can support SpatialData with MappedCollection\n",
+    "# Cell Segmentation, domain adaptation, or just some classification\n",
+    "# Potentially here or in a new guide how to create a tiledbsoma store for spatial data. Talk to Sergei again."
    ]
   },
   {
