--- a/docs/spatial.ipynb
+++ b/docs/spatial.ipynb
@@ -275,11 +275,8 @@
   }
  ],
  "metadata": {
-  "interpreter": {
-   "hash": "ae1fefc8646a06dd2e75004cd934adda7c5727b046986a772e3b44b0ffba9754"
-  },
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('py39')",
+   "display_name": "lamindb",
    "language": "python",
    "name": "python3"
   },
@@ -293,7 +290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.8"
   },
   "nbproject": {
    "dependency": null,
