--- a/docs/imaging.ipynb
+++ b/docs/imaging.ipynb
@@ -422,7 +422,7 @@
     "ln.ULabel(name=\"autophagy imaging\").save()\n",
     "\n",
     "# loop through all artifacts and add feature values\n",
-    "# TODO discuss whether we should not create new Artifacts here but rather filter for the existing ones\n",
+    "# TODO when moving to the local instance - filter for the Artifacts and don't create them from scratch\n",
     "artifacts = []\n",
     "for idx, row in metadata_files.iterrows():\n",
     "    artifact = ln.Artifact(row[\"image_path\"], \n",
@@ -439,7 +439,6 @@
     "            \"channel\": row.channel,\n",
     "            \"imaged structure\": row[\"imaged structure\"],\n",
     "            \"study\": \"autophagy imaging\",\n",
-    "            \"artifact type\": \"input images\",\n",
     "            \"FOV\": row.FOV, \n",
     "            \"magnification\": row.magnification,\n",
     "            \"microscope\": row.microscope,\n",
